# pygullian-parser

./: .gitignore  README.md  main.py  pyproject.toml
examples/: hello_world.gullian
gullian_parser/: __init__.py  lexer.py  parser.py
